--- a/ifolder/src/FormsTrayApp/SyncLog.resx
+++ b/ifolder/src/FormsTrayApp/SyncLog.resx
@@ -158,7 +158,7 @@
     <value>392, 316</value>
   </data>
   <data name="log.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>0</value>
+    <value>1</value>
   </data>
   <data name="log.Visible" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -233,7 +233,7 @@
     <value>392, 42</value>
   </data>
   <data name="toolBar1.TabIndex" type="System.Int32, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>4</value>
+    <value>0</value>
   </data>
   <data name="toolBar1.TextAlign" type="System.Windows.Forms.ToolBarTextAlign, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Underneath</value>
@@ -248,7 +248,7 @@
     <value>toolBar1</value>
   </data>
   <data name="&gt;&gt;toolBar1.Type">
-    <value>Novell.FormsTrayApp.ToolBarEx, iFolderApp, Version=1.0.1921.28447, Culture=neutral, PublicKeyToken=null</value>
+    <value>Novell.FormsTrayApp.ToolBarEx, iFolderApp, Version=1.0.1924.22385, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;toolBar1.Parent">
     <value>$this</value>
@@ -301,6 +301,9 @@
   <data name="$this.Locked" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </data>
+  <data name="$this.Name">
+    <value>SyncLog</value>
+  </data>
   <data name="$this.Language" type="System.Globalization.CultureInfo, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>(Default)</value>
   </data>
@@ -309,9 +312,6 @@
   </data>
   <data name="$this.Localizable" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
-  </data>
-  <data name="$this.Name">
-    <value>SyncLog</value>
   </data>
   <data name="$this.GridSize" type="System.Drawing.Size, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>8, 8</value>
@@ -362,7 +362,7 @@
     <value />
   </data>
   <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>Inherit</value>
+    <value>NoControl</value>
   </data>
   <data name="$this.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>0, 0</value>
