--- a/ifolder/src/FormsTrayApp/Credits.resx
+++ b/ifolder/src/FormsTrayApp/Credits.resx
@@ -260,10 +260,10 @@
     <value>Organizations</value>
   </data>
   <data name="listBox1.Items38">
-    <value>	Mono Team	(mono rocks!)</value>
+    <value>	Mono Team</value>
   </data>
   <data name="listBox1.Items39">
-    <value>	Novell, Inc	(employment rocks!)</value>
+    <value>	Novell, Inc.</value>
   </data>
   <data name="listBox1.Items40">
     <value />
@@ -278,10 +278,10 @@
     <value>	Nat Friedman</value>
   </data>
   <data name="listBox1.Items44">
-    <value>	Edd Dumbill	(Mono: A Developer's Notebook)</value>
+    <value>	Edd Dumbill</value>
   </data>
   <data name="listBox1.Items45">
-    <value>	Niel M. Bornstein	(Mono: A Developer's Notebook)</value>
+    <value>	Niel M. Bornstein</value>
   </data>
   <data name="listBox1.Items46">
     <value />
@@ -290,7 +290,7 @@
     <value>Other Contributors</value>
   </data>
   <data name="listBox1.Items48">
-    <value>	Jakub Steiner	(some "borrowed" graphics)</value>
+    <value>	Jakub Steiner</value>
   </data>
   <data name="listBox1.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>8, 8</value>
@@ -409,6 +409,9 @@
   <data name="$this.TrayLargeIcon" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>False</value>
   </data>
+  <data name="$this.Name">
+    <value>Credits</value>
+  </data>
   <data name="$this.Localizable" type="System.Boolean, mscorlib, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </data>
@@ -426,9 +429,6 @@
   </data>
   <data name="$this.DefaultModifiers" type="System.CodeDom.MemberAttributes, System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>Private</value>
-  </data>
-  <data name="$this.Name">
-    <value>Credits</value>
   </data>
   <data name="$this.AccessibleDescription" type="System.Resources.ResXNullRef, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value />
@@ -464,7 +464,7 @@
     <value />
   </data>
   <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>Inherit</value>
+    <value>NoControl</value>
   </data>
   <data name="$this.Location" type="System.Drawing.Point, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>0, 0</value>
